프로젝트 생성 및 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/Excel
 spring.datasource.username=Excel
 spring.datasource.password=1234
+
+server.port=8686
+
+# ?? ??? ???? ??
+upload.directory=C:/ExcelUpload
