--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,14 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/Excel
 spring.datasource.username=Excel
 spring.datasource.password=1234
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 server.port=8686
 
 # ?? ??? ???? ??
 upload.directory=C:/ExcelUpload
+
+# MyBatis ?? ?? ??? ?????.
+mybatis.mapper-locations=classpath*:mapper/**/*.xml
+
+
